correction swagger docs
