# pkg/handler/item.go
@@ -8,6 +8,20 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Create item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description create todo item
+// @ID create-item
+// @Accept  json
+// @Produce  json
+// @Param id path int true "List ID"
+// @Param input body todo.TodoItem true "item info"
+// @Success 200 {integer} map[string]int"id of created item"
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /api/lists/{id}/items [post]
 func (h *Handler) createItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -16,7 +30,7 @@ func (h *Handler) createItem(c *gin.Context) {
 
 	listId, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, "invalid lsit id param")
+		newErrorResponse(c, http.StatusBadRequest, "invalid item id param")
 		return
 	}
 
@@ -38,6 +52,19 @@ func (h *Handler) createItem(c *gin.Context) {
 	})
 }
 
+// @Summary Get all items
+// @Security ApiKeyAuth
+// @Tags items
+// @Description get all todo items for a list
+// @ID get-all-items
+// @Accept  json
+// @Produce  json
+// @Param id path int true "List ID"
+// @Success 200 {array} todo.TodoItem
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /api/lists/{id}/items [get]
 func (h *Handler) getAllItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -57,6 +84,20 @@ func (h *Handler) getAllItem(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, items)
 }
+
+// @Summary Get item by id
+// @Security ApiKeyAuth
+// @Tags items
+// @Description get todo item by id
+// @ID get-item-by-id
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Item ID"
+// @Success 200 {object} todo.TodoItem
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /api/items/{id} [get]
 func (h *Handler) getItemById(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -65,7 +106,7 @@ func (h *Handler) getItemById(c *gin.Context) {
 
 	itemId, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, "invalid list id param")
+		newErrorResponse(c, http.StatusBadRequest, "invalid item id param")
 		return
 	}
 
@@ -76,6 +117,21 @@ func (h *Handler) getItemById(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, item)
 }
+
+// @Summary Update item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description update todo item
+// @ID update-item
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Item ID"
+// @Param input body todo.UpdateItemInput true "update info"
+// @Success 200 {object} StatusResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /api/items/{id} [put]
 func (h *Handler) updateItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -97,10 +153,24 @@ func (h *Handler) updateItem(c *gin.Context) {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
-	c.JSON(http.StatusOK, statusResponse{
+	c.JSON(http.StatusOK, StatusResponse{
 		Status: "ok",
 	})
 }
+
+// @Summary Delete item
+// @Security ApiKeyAuth
+// @Tags items
+// @Description delete todo item
+// @ID delete-item
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Item ID"
+// @Success 200 {object} StatusResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /api/items/{id} [delete]
 func (h *Handler) deleteItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -109,7 +179,7 @@ func (h *Handler) deleteItem(c *gin.Context) {
 
 	itemId, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, "invalid list id param")
+		newErrorResponse(c, http.StatusBadRequest, "invalid item id param")
 		return
 	}
 
@@ -118,6 +188,6 @@ func (h *Handler) deleteItem(c *gin.Context) {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
-	c.JSON(http.StatusOK, statusResponse{Status: "ok"})
+	c.JSON(http.StatusOK, StatusResponse{Status: "ok"})
 
 }
